# MaxORM

./: .gitignore  CMakeLists.txt  DBObject.cpp  HttpDBSynch.cpp  JsonQuery.cpp  Kconfig.projbuild  MaxDB.cpp  README.md  idf_component.yml
SQLiteCPP/: Backup.cpp  Backup.h  CMakeLists.txt  Column.cpp  Column.h  Database.cpp  Database.h  Exception.cpp  SQLiteCpp.h  Statement.cpp  Statement.h  Transaction.cpp  Transaction.h  VariadicBind.h
SQLite_Esp_Port/: config_ext.h  esp32.cpp  shox96_0_2.cpp  unishox1.c
examples/MaxORM-ex/: CMakeLists.txt  sdkconfig
examples/MaxORM-ex/main/: CMakeLists.txt  MaxORM-ex.cpp  idf_component.yml
examples/MaxORM-ex/main/DataBase/: DBCochon2.h
examples/MaxORM-example/: #sdkconfig  #sdkconfig.defaults  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/MaxORM-example/main/: CMakeLists.txt  idf_component.yml
examples/MaxORM-example/main/DataBase/: DBCochon.cpp  DBCochon.h  DBCochon2.cpp
include/: DBObject.h  DBUtil.h  HttpDBSynch.h  JsonQuery.h  MaxDB.h  MaxORM.h
zlib/: gzlib.c  zlib.h  zutil.c
